--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,11 @@ android {
         }
     }
 }
+repositories {
+    maven { url "https://jitpack.io" }
+    mavenCentral()
+}
+
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -25,6 +30,11 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.2.0'
-    testCompile 'junit:junit:4.12'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.github.vajro:MaterialDesignLibrary:1.6'
+
+    compile 'com.victor:lib:1.0.4'
+    compile 'com.github.florent37:expectanim:1.0.1'
+    compile 'com.android.support:design:25.2.0'
+    testCompile 'junit:junit:4.12'
 }
