--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,8 @@ dependencies {
     apt 'fr.xebia.android.freezer:freezer-compiler:2.0.6'
     compile 'com.android.support:cardview-v7:25.0.+'
     compile 'com.android.support:recyclerview-v7:25.0.+'
+    compile 'com.malinskiy:superrecyclerview:1.1.4'
+    compile 'com.github.nisrulz:sensey:1.7.0'
+    compile 'cn.pedant.sweetalert:library:1.3'
 }
 
