--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,5 +50,9 @@ dependencies {
     compile 'com.malinskiy:superrecyclerview:1.1.4'
     compile 'com.github.nisrulz:sensey:1.7.0'
     compile 'cn.pedant.sweetalert:library:1.3'
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.1'
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
 }
 
