--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:replace="android:icon">
+        tools:replace="android:icon"
+        android:largeHeap="true"
+        android:hardwareAccelerated="false">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,7 +26,8 @@
 
         <service android:name=".services.SentimentAnalysisIntentService" />
 
-        <activity android:name=".DisplayDiary"></activity>
+        <activity android:name=".DisplayDiary" />
+        <activity android:name=".MoodGraph"></activity>
     </application>
 
 </manifest>
