--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,5 +54,7 @@ dependencies {
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    compile 'com.prolificinteractive:material-calendarview:1.4.3'
+    compile 'com.azoft.carousellayoutmanager:carousel:1.2.1'
 }
 
