--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,13 +8,13 @@
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
+        android:hardwareAccelerated="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:replace="android:icon"
-        android:largeHeap="true"
-        android:hardwareAccelerated="false">
+        tools:replace="android:icon">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,7 +27,9 @@
         <service android:name=".services.SentimentAnalysisIntentService" />
 
         <activity android:name=".DisplayDiary" />
-        <activity android:name=".MoodGraph"></activity>
+        <activity android:name=".MoodGraph" />
+        <activity android:name=".CalendarPick" />
+        <activity android:name=".DiaryEntryByDate"></activity>
     </application>
 
 </manifest>
