--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,5 +59,6 @@ dependencies {
     compile 'org.apache.commons:commons-math3:3.6.1'
     compile 'com.karumi:dexter:4.0.0'
     compile 'com.tapadoo.android:alerter:1.0.6'
+    compile 'com.parse:parse-android:1.14.1'
 }
 
