--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,5 +60,16 @@ dependencies {
     compile 'com.karumi:dexter:4.0.0'
     compile 'com.tapadoo.android:alerter:1.0.6'
     compile 'com.parse:parse-android:1.14.1'
+    // Module dependency on ParseUI libraries sources
+    compile 'com.parse:parseui-login-android:0.0.2'
+    compile 'com.parse:parseui-widget-android:0.0.2'
+
+// Uncomment if using Facebook or Twitter Login (optional Maven dependency)
+// compile 'com.facebook.android:facebook-android-sdk:4.6.0'
+// compile 'com.parse:parsefacebookutils-v4-android:1.10.3@aar'
+// compile 'com.parse:parsetwitterutils-android:1.10.3'
+
+    compile 'com.jakewharton:butterknife:8.5.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 }
 
