--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity android:name=".EmotionAnalyze" />
 
@@ -41,8 +40,6 @@
         <activity android:name=".CalendarPick" />
         <activity android:name=".DiaryEntryByDate" />
         <activity android:name=".StatisticsActivity" />
-
-
         <activity
             android:name="com.parse.ui.ParseLoginActivity"
             android:label="@string/app_name"
@@ -56,11 +53,8 @@
                 android:name="com.parse.ui.ParseLoginActivity.PARSE_LOGIN_EMAIL_AS_USERNAME"
                 android:value="true" />
         </activity>
-
-
-        <activity android:name=".LoginActivity">
-
-        </activity>
+        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".FeedActivity"></activity>
     </application>
 
 </manifest>
