--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
-        android:hardwareAccelerated="false"
+
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
@@ -31,15 +31,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
+
         <activity android:name=".EmotionAnalyze" />
 
         <service android:name=".services.SentimentAnalysisIntentService" />
 
-        <activity android:name=".DisplayDiary" />
+        <activity android:name=".DisplayDiary" android:hardwareAccelerated="true"/>
         <activity android:name=".MoodGraph" />
-        <activity android:name=".CalendarPick" />
-        <activity android:name=".DiaryEntryByDate" />
-        <activity android:name=".StatisticsActivity" />
+        <activity android:name=".CalendarPick"/>
+        <activity android:name=".DiaryEntryByDate" android:hardwareAccelerated="true"/>
+        <activity android:name=".StatisticsActivity" android:hardwareAccelerated="true"/>
         <activity
             android:name="com.parse.ui.ParseLoginActivity"
             android:label="@string/app_name"
@@ -54,7 +57,7 @@
                 android:value="true" />
         </activity>
         <activity android:name=".LoginActivity"></activity>
-        <activity android:name=".FeedActivity"></activity>
+        <activity android:name=".FeedActivity" android:hardwareAccelerated="true"></activity>
     </application>
 
 </manifest>
