--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,6 @@
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
-
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
@@ -31,18 +30,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
-
         <activity android:name=".EmotionAnalyze" />
 
         <service android:name=".services.SentimentAnalysisIntentService" />
 
-        <activity android:name=".DisplayDiary" android:hardwareAccelerated="true"/>
+        <activity
+            android:name=".DisplayDiary"
+            android:hardwareAccelerated="true" />
         <activity android:name=".MoodGraph" />
-        <activity android:name=".CalendarPick"/>
-        <activity android:name=".DiaryEntryByDate" android:hardwareAccelerated="true"/>
-        <activity android:name=".StatisticsActivity" android:hardwareAccelerated="true"/>
+        <activity android:name=".CalendarPick" />
+        <activity
+            android:name=".DiaryEntryByDate"
+            android:hardwareAccelerated="true" />
+        <activity
+            android:name=".StatisticsActivity"
+            android:hardwareAccelerated="true" />
         <activity
             android:name="com.parse.ui.ParseLoginActivity"
             android:label="@string/app_name"
@@ -56,8 +58,11 @@
                 android:name="com.parse.ui.ParseLoginActivity.PARSE_LOGIN_EMAIL_AS_USERNAME"
                 android:value="true" />
         </activity>
-        <activity android:name=".LoginActivity"></activity>
-        <activity android:name=".FeedActivity" android:hardwareAccelerated="true"></activity>
+        <activity android:name=".LoginActivity" />
+        <activity
+            android:name=".FeedActivity"
+            android:hardwareAccelerated="true" />
+        <activity android:name=".ManualEntry"></activity>
     </application>
 
 </manifest>
