--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,5 +77,10 @@ dependencies {
     //Number picker
     compile 'com.shawnlin:number-picker:2.4.3'
 
+    //Glide
+    compile 'com.github.bumptech.glide:glide:4.0.0-RC0'
+    compile 'com.android.support:support-v4:25.3.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC0'
+
 }
 
