--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,6 +91,11 @@ dependencies {
 
     compile 'com.github.javiersantos:MaterialStyledDialogs:2.1'
 
+    //Input Dialogs
+    compile 'com.yarolegovich:lovely-dialog:1.0.7'
+
+    compile 'com.github.yesidlazaro:GmailBackground:1.2.0'
+
 
 
 }
